this is the first commit for the devOps hands-on on git

--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -16,6 +16,6 @@
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup CI CD </p>
+    <p>This session is to do hands-on for git commands</p>
   </body>
 </html>
