--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -17,5 +17,6 @@
     </table>
 
     <p>This session is to do hands-on for git commands</p>
+    <p>This is a change from new branch</p>
   </body>
 </html>
